Fix nav left side on mobile

--- a/django_boards/static/django_boards/scss/_alignments.scss
+++ b/django_boards/static/django_boards/scss/_alignments.scss
@@ -12,19 +12,19 @@
 /* Border classes
 *******************************************************************************/
 .border, .border-all, .border-all * {
-  border: 1px solid $oc-gray-5 !important;
+  border: 1px solid $hr !important;
 }
 .border-top, .border-top-all, .border-top-all * {
-  border-top: 1px solid $oc-gray-5 !important;
+  border-top: 1px solid $hr !important;
 }
 .border-bottom, .border-bottom-all, .border-bottom-all * {
-  border-bottom: 1px solid $oc-gray-5 !important;
+  border-bottom: 1px solid $hr !important;
 }
 .border-right, .border-right-all, .border-right-all * {
-  border-right: 1px solid $oc-gray-5 !important;
+  border-right: 1px solid $hr !important;
 }
 .border-left, .border-left-all, .border-left-all * {
-  border-left: 1px solid $oc-gray-5 !important;
+  border-left: 1px solid $hr !important;
 }
 /* Padding classes
 *******************************************************************************/
